--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,2 +1,6 @@
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem esse, est. Dignissimos fugiat sapiente, repellendus nesciunt fuga consequuntur ipsum reiciendis laboriosam modi vel esse suscipit iusto eum laudantium accusantium quidem.</p>
-<a href="#/countries">Browse countries</a>
+
+
+<nav>
+	<a href="#/countries">Browse countries</a>
+</nav>
