add country detail view
- placeholder view template
- add routing for country view
- add wireframe styles for placeholder images

--- a/app/views/countries/countries.html
+++ b/app/views/countries/countries.html
@@ -11,7 +11,7 @@
 	</thead>
 	<tbody>
 		<tr>
-			<td>Afghanistan</td>
+			<td><a href="#/countries/AF/">Afghanistan</a></td>
 			<td>AF</td>
 			<td>Kabul</td>
 			<td>647,500</td>
@@ -19,7 +19,7 @@
 			<td>AS</td>
 		</tr>
 		<tr>
-			<td>Albania</td>
+			<td><a href="#/countries/AL/">Albania</a></td>
 			<td>AL</td>
 			<td>Tirana</td>
 			<td>28,740</td>
