--- a/app/views/countries/countries.html
+++ b/app/views/countries/countries.html
@@ -10,21 +10,13 @@
 		</tr>
 	</thead>
 	<tbody>
-		<tr>
-			<td><a href="#/countries/AF/">Afghanistan</a></td>
-			<td>AF</td>
-			<td>Kabul</td>
-			<td>647,500</td>
-			<td>2,912,286</td>
-			<td>AS</td>
-		</tr>
-		<tr>
-			<td><a href="#/countries/AL/">Albania</a></td>
-			<td>AL</td>
-			<td>Tirana</td>
-			<td>28,740</td>
-			<td>2,986,952</td>
-			<td>EU</td>
+		<tr ng-repeat="country in countries.countries">
+			<td><a href="#/countries/{{ country.Code }}/">{{ country.Name }}</a></td>
+			<td>{{ country.Code }}</td>
+			<td>{{ country.Capital }}</td>
+			<td>{{ country.Area }}</td>
+			<td>{{ country.Population }}</td>
+			<td>{{ country.Continent }}</td>
 		</tr>
 	</tbody>
 </table>
