--- a/app/views/countries/countries.html
+++ b/app/views/countries/countries.html
@@ -14,8 +14,8 @@
 			<td><a href="#/countries/{{ country.code }}/">{{ country.countryName }}</a></td>
 			<td>{{ country.countryCode }}</td>
 			<td>{{ country.capital }}</td>
-			<td>{{ country.areaInSqKm }}</td>
-			<td>{{ country.population }}</td>
+			<td class="number">{{ country.areaInSqKm | number : 0 }}</td>
+			<td class="number">{{ country.population | number : 0 }}</td>
 			<td>{{ country.continentName }}</td>
 		</tr>
 	</tbody>
