add nav to country view

--- a/app/views/country/country.html
+++ b/app/views/country/country.html
@@ -24,3 +24,9 @@
 <div class="wireframe-image">MAP</div>
 
 <div class="wireframe-image">FLAG</div>
+
+
+<nav>
+	<a href="#/">Home</a>
+	<a href="#/countries">Browse countries</a>
+</nav>
