table row striping

--- a/app/countriesCapitals.css
+++ b/app/countriesCapitals.css
@@ -19,6 +19,9 @@ table {
 	border-collapse: collapse;
 	overflow: hidden;
 }
+tr:nth-child(2n) {
+	background: rgba( 0, 0, 0, 0.03 );
+}
 tr.country.ng-enter-stagger {
 	transition-delay: .1s;
 	transition-duration: 0;
@@ -43,9 +46,11 @@ th:first-child, td:first-child {
 th:last-child, td:last-child {
 	padding-right: 0;
 }
-thead th {
+tr:last-child th,
+tr:last-child td {
 	border-bottom: 1px solid #321;
 }
+
 
 /* nav buttons */
 nav {
