--- a/app/views/countries/countries.html
+++ b/app/views/countries/countries.html
@@ -1,6 +1,7 @@
 <table>
 	<thead>
 		<tr>
+			<td></td>
 			<th>Name</th>
 			<th>Code</th>
 			<th>Capital</th>
@@ -10,7 +11,8 @@
 		</tr>
 	</thead>
 	<tbody>
-		<tr class="country" ng-repeat="country in vm.countries">
+		<tr class="country" ng-repeat="country in vm.countries | limitTo: vm.pagination.page">
+			<td class="number">{{ vm.pagination.start + $index + 1 | number }}</td>
 			<td><a href="#/countries/{{ country.countryCode }}/">{{ country.countryName }}</a></td>
 			<td>{{ country.countryCode }}</td>
 			<td>{{ country.capital }}</td>
@@ -20,6 +22,9 @@
 		</tr>
 	</tbody>
 </table>
+
+<button ng-if="vm.pagination.showPrevious" ng-click="vm.pagination.previous()">Back</button>
+<button ng-if="vm.pagination.showNext" ng-click="vm.pagination.next()">Next</button>
 
 
 <nav>
