add leaflet mapping
- bower install angular-leaflet-directive
- add leaflet scripts/css to app
- add placeholder map to country view

--- a/app/views/country/country.html
+++ b/app/views/country/country.html
@@ -1,5 +1,7 @@
 <h2>{{ vm.country.countryName }}</h2>
 
+<leaflet width="640px" height="480px"></leaflet>
+
 <dl>
 	<dt>Population</dt>
 	<dd>{{ vm.country.population | number : 0 }}</dd>
