add leaflet map
- setup map bounds based on country
- parse lat/long as floats in capital info
- show marker for capital

--- a/app/views/country/country.html
+++ b/app/views/country/country.html
@@ -1,6 +1,6 @@
 <h2>{{ vm.country.countryName }}</h2>
 
-<leaflet width="640px" height="480px"></leaflet>
+<leaflet id="map" maxbounds="vm.map.maxbounds" tiles="vm.map.tiles" markers="vm.map.markers"></leaflet>
 
 <dl>
 	<dt>Population</dt>
