--- a/app/countriesCapitals.css
+++ b/app/countriesCapitals.css
@@ -15,6 +15,7 @@ h1 {
 }
 
 
+/* table styles */
 table {
 	border-collapse: collapse;
 	overflow: hidden;
@@ -43,6 +44,13 @@ th, td {
 tr:last-child th,
 tr:last-child td {
 	border-bottom: 1px solid #321;
+}
+
+
+/* leaflet */
+#map {
+	width: 100%;
+	height: 500px;
 }
 
 
