--- a/app/views/country/country.html
+++ b/app/views/country/country.html
@@ -1,6 +1,6 @@
 <h2>{{ vm.country.countryName }}</h2>
 
-<leaflet id="map" maxbounds="vm.map.maxbounds" tiles="vm.map.tiles" markers="vm.map.markers"></leaflet>
+<leaflet id="map" tiles="vm.map.tiles" maxbounds="vm.map.maxbounds" markers="vm.map.markers"></leaflet>
 
 <dl>
 	<dt>Population</dt>
