fade in lazy loaded details
- fade in capital population details
- fade in neighbours list

--- a/app/countriesCapitals.css
+++ b/app/countriesCapitals.css
@@ -54,6 +54,17 @@ tr:last-child td {
 }
 
 
+/* fade in population */
+.lazy.ng-hide-remove {
+	display: block !important;
+	opacity: 0;
+}
+.lazy {
+	opacity: 1;
+	transition: opacity .7s;
+}
+
+
 /* nav buttons */
 nav {
 	margin: 2em 0;
