--- a/app/views/country/country.html
+++ b/app/views/country/country.html
@@ -12,11 +12,11 @@
 	<dt>Capital</dt>
 	<dd>{{ vm.country.capital.name }}</dd>
 
-	<dt ng-if="vm.country.capital.population">Population of capital</dt>
-	<dd ng-if="vm.country.capital.population">{{ vm.country.capital.population | number : 0 }}</dd>
+	<dt class="lazy" ng-show="vm.country.capital.population">Population of capital</dt>
+	<dd class="lazy" ng-show="vm.country.capital.population">{{ vm.country.capital.population | number : 0 }}</dd>
 
-	<dt><ng-pluralize count="vm.neighbours.length" when="{ 0: 'No neighbours', 1: 'One neighbour', other: '{} neigbours'}"></ng-pluralize></dt>
-	<dd>
+	<dt class="lazy" ng-show="vm.neighbours"><ng-pluralize count="vm.neighbours.length" when="{ 0: 'No neighbours', 1: 'One neighbour', other: '{} neigbours'}"></ng-pluralize></dt>
+	<dd class="lazy" ng-show="vm.neighbours">
 		<span ng-if="vm.neighbours.length < 1">-</span>
 		<span ng-repeat="neighbour in vm.neighbours"><a href="#/countries/{{ neighbour.countryCode }}">{{ neighbour.countryName }}</a><span ng-if=" ! $last">, </span></span>
 	</dd>
