--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,5 +1,11 @@
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem esse, est. Dignissimos fugiat sapiente, repellendus nesciunt fuga consequuntur ipsum reiciendis laboriosam modi vel esse suscipit iusto eum laudantium accusantium quidem.</p>
+<p><a href="http://www.thinkful.com">Thinkful</a> challenge:
+code up an Angular app that allows users to search and visualize data about countries and capital cities.</p>
 
+<ul>
+	<li>data from <a href="http://www.geonames.org/">GeoNames</a></li>
+	<li>uses the <a href="http://leafletjs.com/">leaflet</a> mapping library via <a href="http://tombatossals.github.io/angular-leaflet-directive/">angular-leaflet</a></li>
+	<li>map tiles from ESRI ArcGIS <a href="http://services.arcgisonline.com/ArcGIS/rest/services/NatGeo_World_Map/MapServer">NatGeo_World_Map</a></li>
+</ul>
 
 <nav>
 	<a href="#/countries">Browse countries</a>
