improve loading screen (closes #5)
- add 3d rotating globe to loading screen
- lightbox styles for loading screen
- bower install threejs
- add texture images for Earth model

--- a/app/countriesCapitals.css
+++ b/app/countriesCapitals.css
@@ -10,6 +10,27 @@ h1 {
 }
 
 
+.loading {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	background: rgba( 0, 0, 0, 0.88 );
+	height: 100%;
+	z-index: 10000; /* above leaflet controls */
+	text-align: center;
+	color: #fff;
+	padding: 2em 0;
+	box-sizing: border-box;
+}
+.loading progress,
+.loading strong,
+.loading canvas {
+	display: block;
+	margin: 1em auto;
+}
+
+
 .number {
 	text-align: right;
 }
